<?xml version="1.0" encoding="utf-8"?>

<!-- Inspiration for this layout file has been found in the following git project
https://github.com/usmaanz/Hangman -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameScreen"
    android:padding="8dp"
    app:layout_constraintTop_toBottomOf="@+id/spinTheWheel">

    <TextView
        android:id="@+id/lives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toStartOf="@+id/category"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Lives: 5" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Points: 2000" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toStartOf="@+id/points"

        app:layout_constraintTop_toTopOf="parent"
        tools:text="Category: Sport " />


    <Button
        android:id="@+id/spinTheWheel"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:text="@string/spin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/keyboardView"/>


    <TextView
        android:id="@+id/usedLetters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/spinTheWheel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Used letters: ABHJIFUD"
        tools:textColor="#69696A" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/keyboardView"
        android:layout_width="414dp"
        android:layout_height="189dp"
        android:padding="16dp"
        app:constraint_referenced_ids="a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinTheWheel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/A"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/B"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/C"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/D"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/E"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/F"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/G"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/H"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/I"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/j"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/J"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/K"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/L"
            android:textColor="@color/white"
            android:textSize="20sp" />

    <TextView
        android:id="@+id/m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:paddingHorizontal="10dp"
        android:text="@string/M"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="352dp" />

        <TextView
            android:id="@+id/n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/N"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/O"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/P"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/Q"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/R"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/S"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/T"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/u"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/U"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/V"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/W"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/X"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/Y"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/Z"
            android:textColor="@color/white"
            android:textSize="20sp" />

    <TextView
        android:id="@+id/spinResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category"
        tools:text="You landed on: Bankrupt! You lost a life" />

    <TextView
        android:id="@+id/wordToBeGuessed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:letterSpacing="0.5"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/usedLetters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinResult"
        app:layout_constraintVertical_bias="0.936"
        tools:text="_________" />


</androidx.constraintlayout.widget.ConstraintLayout>

